[package]
name = "calc"
version = "0.1.8"
edition = "2024"
authors = ["Onismond Yao Duame onismondyao@gmail.com"]
license = "MIT"

description = "A CLI calculator program"
homepage = "https://github.com/onismond/calc"
repository = "https://github.com/onismond/calc"
readme = "README.md"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }

[package.metadata.rpm]
summary = "A CLI calculator program"
license = "MIT"
group = "Applications/Utilities"
requires = ["glibc"]
vendor = "Onismond"
url = "https://github.com/onismond/calc"
targets = [
    { path = "target/release/calc", dest = "/usr/bin/calc", mode = "755" },
    { path = "README.md", dest = "/usr/share/doc/calc/README.md", mode = "644" }
]
