[package]
name = "calc"
version = "0.1.10"
edition = "2024"
authors = ["Onismond Yao Duame onismondyao@gmail.com"]
license = "MIT"

description = "A CLI calculator program"
homepage = "https://github.com/onismond/calc"
repository = "https://github.com/onismond/calc"
readme = "README.md"

[package.metadata.rpm]
summary = "A CLI calculator program"
license = "MIT"
group = "Applications/Utilities"
requires = ["glibc"]
vendor = "Onismond"
url = "https://github.com/onismond/calc"

[package.metadata.rpm.targets]
calc = { path = "calc", dest = "/usr/bin/calc", mode = "755" }
readme = { path = "README.md", dest = "/usr/share/doc/calc/README.md", mode = "644" }

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }

