[package]
name = "calc"
version = "0.1.0"
edition = "2024"
authors = ["Onismond Yao Duame onismondyao@gmail.com"]
license = "MIT"

description = "A CLI calculator program"
homepage = "https://github.com/onismond/calc"
repository = "https://github.com/onismond/calc"
readme = "README.md"

[package.metadata.generate-rpm]
license = "MIT"
assets = [
    { source = "target/release/calc", dest = "/usr/bin/calc", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/calc/README.md", mode = "644" },
]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }

